fix global z-index

--- a/src/assets/sass/_global.sass
+++ b/src/assets/sass/_global.sass
@@ -39,4 +39,5 @@ body
 
 #tooltip
   position: absolute
+  z-index: 10
   max-width: 300px
