--- a/src/assets/sass/_notif.sass
+++ b/src/assets/sass/_notif.sass
@@ -7,10 +7,3 @@
   transform: translateX(-50%)
   &.onsave
     display: block
-
-.popup
-  width: 30vw
-  position: fixed
-  top: 50%
-  left: 50%
-  transform: translate(-50%, -50%)
